# enso_crop_predictor

./: CHANGELOG.md  Dockerfile  app.py  enso-engine.cabal  forecast.json
haskell/: crop_recommend.hi  crop_recommend.hs  enso-engine.cabal  final_crop_dataset_complete.csv
python/: encoders.pkl  predict.py  rainfall_model.pkl
