cabal-version:      2.4
name:               enso-engine
version:            0.1.0.0
build-type:         Simple

executable enso-engine
  main-is:          Main.hs
  hs-source-dirs:   app, src
  other-modules:    Types, Engine, CropData
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5,
      aeson,
      bytestring,
      text